# rust_kube_learning

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
kubernetes/: deployment.yaml  ingr.yaml  service.yaml
src/: main.rs
src/api/: mod.rs  processing_api.rs  user_api.rs
src/models/: image_model.rs  mod.rs  processing_model.rs
src/repository/: mongodb_repo.rs
