[package]
name = "rust_kube_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
serde = "1.0"
dotenv = "0.15.0"
futures = "0.3"
image = "0.24"

[dependencies.mongodb]
version = "2.7"